<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">A Simple Twit</string>
    <string name="login_label">Log in</string>
    <string name="title_activity_timeline">TimelineActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Dummy_Tweet_Text">Dummy Tweet Text</string>
    <string name="Dummy_Screen_Name">Dummy Screen Name</string>
    <string name="Dummy_Real_Name">Dummy Real Name</string>
    <string name="Dummy_Created_At">9m</string>
    <string name="Compose">Compose</string>
    <string name="No_internet">No internet</string>
    <string name="Unable_to_connect_to_the_internet_right_now">Unable to connect to the internet right now.</string>
    <string name="Unable_to_authenticate_with_Twitter">Unable to authenticate with Twitter.</string>
    <string name="Unable_to_post_status">Unable to post status.</string>
    <string name="Tweet">Tweet</string>
    <string name="Dummy_Chars_Remaining">140</string>
    <string name="Whats_Happening">What\'s happening?</string>
    <string name="title_activity_tweet_display">TweetDisplayActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="User_Name">User Name</string>
    <string name="Real_Name">Real Name</string>
    <string name="Tagline">Tagline</string>
    <string name="Followers_Following"># followers, following #</string>
    <string name="title_activity_user_timeline">UserTimelineActivity</string>
</resources>