<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/ivProfileImage"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvScreenName"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/tvRealName"
        android:text="@string/Dummy_Screen_Name"
        android:paddingLeft="4dp"
        android:textColor="#8899a6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvText"
        android:layout_below="@+id/tvScreenName"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:layout_toEndOf="@+id/ivProfileImage"
        android:text="@string/Dummy_Tweet_Text"
        android:textColor="#292f33" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Dummy_Real_Name"
        android:id="@+id/tvRealName"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:layout_toEndOf="@+id/ivProfileImage"
        android:textStyle="bold"
        android:textColor="#292f33" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvCreatedAt"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/Dummy_Created_At" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvText">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/ivReply"
            android:src="@mipmap/ic_reply"
            android:layout_gravity="left"
            tools:ignore="RtlHardcoded" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/ivRetweet"
            android:src="@mipmap/ic_retweet"
            android:layout_gravity="center_horizontal" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/ivFavorite"
            android:src="@mipmap/ic_favorite"
            android:layout_gravity="right"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>
</RelativeLayout>
