<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.codepath.apps.basictwitter.activities.TweetDisplayActivity">


    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/ivDetailProfileImage"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvDetailScreenName"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/tvDetailRealName"
        android:text="@string/Dummy_Screen_Name"
        android:paddingLeft="4dp"
        android:textColor="#8899a6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvDetailText"
        android:layout_below="@+id/tvDetailScreenName"
        android:layout_toRightOf="@+id/ivDetailProfileImage"
        android:text="@string/Dummy_Tweet_Text"
        android:autoLink="all"
        android:linksClickable="true"
        android:textColor="#292f33"
        android:layout_alignRight="@+id/tvDetailCreatedAt"
        android:layout_alignEnd="@+id/tvDetailCreatedAt"
        android:layout_above="@+id/tableLayout"
        android:textSize="32sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Dummy_Real_Name"
        android:id="@+id/tvDetailRealName"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/ivDetailProfileImage"
        android:layout_toEndOf="@+id/ivDetailProfileImage"
        android:textStyle="bold"
        android:textColor="#292f33" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvDetailCreatedAt"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/Dummy_Created_At" />

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:stretchColumns="1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/tableLayout">

        <TableRow>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:id="@+id/ivDetailReply"
                android:src="@mipmap/ic_reply"
                android:layout_gravity="center_horizontal"
                android:paddingLeft="20dp"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:id="@+id/ivDetailRetweet"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/ic_retweet" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:id="@+id/ivDetailFavorite"
                android:src="@mipmap/ic_favorite"
                android:paddingRight="20dp"
                android:layout_gravity="center_horizontal"
                tools:ignore="RtlHardcoded,RtlSymmetry" />
        </TableRow>
    </TableLayout>

</RelativeLayout>
